hbase：去掉无用的注释 kafka：格式美化 spark：新增