@@ -116,3 +116,43 @@ hadoop jar dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.MapReduceDemo /tmp/wo
 java -Djava.ext.dirs=/usr/hdp/2.2.0.0-2041/hadoop:/data/bigdata/tbds/usr/hdp/2.2.0.0-2041/hadoop/share/hadoop/common/lib/ -cp dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.MapReduceDemo /tmp/wordcount/input/readme.txt /tmp/wordcount/output
 ```
 其中 /tmp/wordcount/input/readme.txt 为输入数据，/tmp/wordcount/output为输出目录
+
+***
+#### 运行 SparkDemo 
+**准备** <br>
+**运行spark程序当前仅支持export认证的方式，不支持在代码中直接注入认证信息**
+1. 在运行前请export 认证信息：
+    ```
+     export hadoop_security_authentication_tbds_secureid=g9q06icsbwYWjQ4i2wbjz3MWNpo8DXqAZxzZ
+     export hadoop_security_authentication_tbds_securekey=qbQyCiWaCJ0HmgiVpc5qofcKd8kVsJgj
+     export hadoop_security_authentication_tbds_username=bhchen
+    ```
+    即从路径/opt/cluster_conf/hadoop/ 中读取配置信息，所以请从集群中获取该配置文件并放置到对应的路径中
+    
+**运行**<br>
+*假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
+1. 运行方式1：采用spark-submit方式
+    ```
+     /usr/hdp/2.2.0.0-2041/spark/bin/spark-submit --master yarn-cluster --executor-memory 3g --driver-memory1g --num-executors 2 --executor-cores 2 --class com.tencent.tbds.demo.SparkDemo dev-demo-1.0-SNAPSHOT.jar /tmp/pyspark_demo/pyspark_demo.csv /tmp/spark_wordcount/
+    ```
+    其中 /tmp/wordcount/input/readme.txt 为输入数据，/tmp/wordcount/output为输出目录
+2. 运行方式2：采用java的方式，该方式需要使用spark Launcher进程来把主任务调度起来：
+    **原理**
+    ```
+    SparkAppHandle handler = new SparkLauncher()
+                    .setAppName("spark-wordcount")
+                    .setSparkHome("/usr/hdp/2.2.0.0-2041/spark ")
+                    .setMaster("yarn")
+                    .setConf("spark.driver.memory", "1g")
+                    .setConf("spark.executor.memory", "3g")
+                    .setConf("spark.executor.cores", "2")
+                    .setConf("spark.executor.instances", "2")
+                    .setAppResource("dev-demo-1.0-SNAPSHOT.jar")
+                    .setMainClass("com.tencent.tbds.demo.SparkDemo")
+                    .addAppArgs(args[0], args[1])
+                    .setDeployMode("cluster")
+    ```
+   **执行**
+    ```
+    java -Djava.ext.dirs=/usr/hdp/2.2.0.0-2041/spark/jars:/usr/hdp/2.2.0.0-2041/hadoop -cp dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.SparkLauncherDemo /usr/hdp/2.2.0.0-2041/spark cluster /tmp/pyspark_demo/pyspark_demo.csv /tmp/spark_wordcount/
+    ```
